load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cache.go",
        "disk.go",
        "httpwritethrough.go",
        "lru.go",
    ],
    importpath = "github.com/buchgr/bazel-remote/cache",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/djherbis/atime:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "disk_test.go",
        "lru_test.go",
    ],
    embed = [":go_default_library"],
)
